--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,48 @@
+@import "tailwindcss";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
   background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --ql-font-arial: Arial, sans-serif;
+  --ql-font-comic-sans: "Comic Sans MS", cursive, sans-serif;
+  --ql-font-courier-new: "Courier New", Courier, monospace;
+  --ql-font-georgia: Georgia, serif;
+  --ql-font-helvetica: Helvetica, sans-serif;
+  --ql-font-lucida: "Lucida Sans", sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.ql-editor .ql-font-arial {
+  font-family: var(--ql-font-arial) !important;
 }
-a:hover {
-  color: #535bf2;
+.ql-editor .ql-font-comic-sans {
+  font-family: var(--ql-font-comic-sans) !important;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.ql-editor .ql-font-courier-new {
+  font-family: var(--ql-font-courier-new) !important;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.ql-editor .ql-font-georgia {
+  font-family: var(--ql-font-georgia) !important;
+}
+.ql-editor .ql-font-helvetica {
+  font-family: var(--ql-font-helvetica) !important;
+}
+.ql-editor .ql-font-lucida {
+  font-family: var(--ql-font-lucida) !important;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.ql-editor {
+  min-height: 30vh;
+  height: auto !important;
+  /* max-height: 80vh; */
+  overflow: hidden; /* Hides scrollbars, expands with content */
 }
