--- a/src/pages/AddBlog/styles.module.css
+++ b/src/pages/AddBlog/styles.module.css
@@ -1,3 +1,9 @@
+.contentwrapper {
+  /* padding: 10px; */
+  /* overflow: hidden;dden;dden; */
+  /* box-shadow: 0px 0px 20px 0px white !important; */
+  /* border: 1px solid white; */
+}
 .wrapper {
   display: flex;
   justify-content: center; /* Center horizontally */
@@ -18,6 +24,6 @@
   margin-bottom: 100px;
   width: max(300px, 80vw);
   text-align: center;
-  color: white;
-  overflow: hidden;
+  color: black;
+  /* overflow: hidden; */
 }
