added more styling and firebase integration

--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,12 @@
 .MuiToolbar-root {
   min-height: 48px !important;
 }
+
+/* .ql-editor .ql-code-block {
+  background-color: none !important;
+} */
+
+/* .ql-syntax {
+  color: black !important;
+  background-color: transparent !important;
+} */
