--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@
     rgba(30, 144, 255, 0.9),
     rgba(0, 102, 204, 0.9)
   );
-  border-radius: 10px;
+  /* border-radius: 10px; */
   border: 2px solid rgba(0, 72, 204, 0.9); /* Darker blue outline */
   box-shadow: 3px 3px 6px rgba(0, 72, 204, 0.6); /* Cartoon pop effect */
   transition: 0.3s ease-in-out;
